--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,12 +1,15 @@
-# Build stage
-FROM node:18-alpine AS builder
+# client/Dockerfile
+FROM node:18-alpine
 WORKDIR /app
+
+# 1. Install dependencies
 COPY package*.json ./
 RUN npm ci
+
+# 2. Copy source & build
 COPY . .
 RUN npm run build
 
-# Serve stage
-FROM nginx:stable-alpine
-COPY --from=builder /app/.next /usr/share/nginx/html
-EXPOSE 80
+# 3. Expose port and start Next.js
+EXPOSE 3000
+CMD ["npm", "run", "start"]
