--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,10 +10,11 @@ services:
       - ./server/.env:/app/.env
 
   frontend:
-    build: ./client
+    build:
+      context: ./client
     env_file: ./client/.env
     ports:
-      - "3000:80"
+      - "3000:3000"
     depends_on:
       - backend
     volumes:
