--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,3 @@
 PORT=4000
-OPENAI_API_KEY=sk-...
-MONGODB_URI=<your‑atlas‑srv‑string>
+OPENAI_API_KEY=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       
+MONGODB_URI=mongodb+srv://ayushsrivastava0609:IHgsiJWoqUAHAFMR@cluster0.hixx8wd.mongodb.net/
